static/css/s2.css
/* ... */
.readerTextTableOfContents .content .structToggles .en {
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
}
.readerTextTableOfContents .content .structToggles .he {
  font-family: "Heebo", sans-serif;
}
.readerTextTableOfContents .structToggles .altStructToggleBox {
  display: table-cell;
  height: 37px;
}
.altStructToggleBox a, .altStructToggleBox a:hover, .altStructToggleBox a:visited, .altStructToggleBox a:link, .altStructToggleBox a:active {
  text-decoration: none;
}

.readerTextTableOfContents .structToggles .altStructToggle {
  display: block;
  padding: 8px;
  color: #999;
  cursor: pointer;
  font-size: 13px;
  text-align: center;
  text-transform: uppercase;
  letter-spacing: 1px;
  border-bottom: 1px solid #CCC;
}
.readerTextTableOfContents .structToggles .altStructToggle.active {
  color: black;
  border-bottom: 4px solid #CCC;
}
.readerTextTableOfContents .structToggles .toggleDivider {
  color: #ccc;
  margin: 0 8px;
}
.readerTextTableOfContents .content .sectionName {
  display: none;
}
.readerTextTableOfContents .content .tocSection > .sectionName {
  font-size: 12px;
  margin: 0 3px 4px;
  color: #666;
  display: block;
}
.readerTextTableOfContents .content .tocContent {
  padding: 30px 0 40px;
  text-align: left;
}
.readerTextTableOfContents.narrowPanel .tocContent {
  padding: 0 0 40px;
}
.readerTextTableOfContents .content .tocSection {
  margin-bottom: 22px;
  display: block;
  text-align: left;
}
.readerTextTableOfContents .content .tocSection.noSubLevels{
  display: none;
}
.readerTextTableOfContents .content .schema-node-contents {
  margin: 0 auto 22px;
  display: block;
  width: 100%;
}
.readerTextTableOfContents .content .schema-node-title {
  color: black;
  font-size: 16px;
  display: inline-block;
  margin-bottom: 10px;
  cursor: pointer;
}
.readerTextTableOfContents .content .schema-node-title .he {
  font-family: "Heebo", sans-serif;
}
.readerTextTableOfContents .content .schema-node-toc {
  display: block;
}
.readerTextTableOfContents .content .schema-node-contents.closed {
  display: none;
}
.readerTextTableOfContents .content .schema-node-toc .schema-node-contents.closed {
  display: block;
}
.readerTextTableOfContents .content .schema-node-control {
  margin: 0 4px;
}
.readerTextTableOfContents .content .tocLevel {
  display: block;
  margin: 0 auto;
}
.readerTextTableOfContents .content .tocContent > .tocLevel > .schema-node-toc {
  margin: 10px 0;
}
.readerTextTableOfContents .schema-node-toc {
  margin: 6px 20px;
}
.readerTextTableOfContents .content .schema-node-toc.linked:hover .schema-node-title {
  text-decoration: underline;
}
.readerTextTableOfContents .altStruct .refLink {
  width: 49%;
  margin: 3px;
  box-sizing: border-box;
  display: inline-block;
}
@media (max-width: 450px) {
  .readerTextTableOfContents .altStruct .refLink {
    margin: 0.5%;
  }
}
.hebrew .readerTextTableOfContents .content .tocSection,
.hebrew .readerTextTableOfContents .content .tocContent,
.english .readerTextTableOfContents.noLangToggleInHebrew .content .tocContent,
.bilingual .readerTextTableOfContents.noLangToggleInHebrew .content .tocContent{
  text-align: right;
}
.english .readerTextTableOfContents.noLangToggleInHebrew .content .tocContent,
.bilingual .readerTextTableOfContents.noLangToggleInHebrew .content .tocContent{
  direction: rtl;
}
.readerTextTableOfContents .versionsBox {
  padding: 20px 0;
}
.readerTextTableOfContents .button.allVersionsButton {
  color: #999;
  text-transform: uppercase;
  font-size: 15px;
  padding: 12px 50px;
  margin: 20px 0;
}
.readerTextTableOfContents .allVersionsButton.inactive {
  background-color: transparent;
}
.readerTextTableOfContents .versionBlocks {
  text-align: center;
}
.readerTextTableOfContents .versionBlocks .versionLanguageBlock {
  padding-bottom: 30px;
  clear: both;
}
.readerTextTableOfContents .versionBlocks .versionLanguageHeader {
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
  text-transform: uppercase;
  letter-spacing: .2em;
  color: #999;
  padding: 10px 0;
}
.readerTextTableOfContents .versionBlock {
  padding: 0 30px;
  margin: 25px 0;
  box-sizing: border-box;
  cursor: pointer;
}
.readerTextTableOfContents .versionBlock .versionTitle {
  display: block;
  font-size: 18px;
  color: #333;
}
.readerTextTableOfContents .versionBlock a {
  color: #999;
}
.readerTextTableOfContents .versionBlock .versionDetails {
  display: inline-block;
  font-size: 12px;
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
  color: #999;
}
.readerTextTableOfContents .versionBlock .versionDetails .separator {
  margin: 0 3px;
}
.readerTextTableOfContents .versionBlocks .versionBlock .versionTitle:hover {
  text-decoration: underline;
}
.readerTextTableOfContents .versionBlock .versionNotes {
  padding-top: 4px;
  color: #999;
}
.modTools {
  width: 50%;
  margin: 0 auto;
}
.modTools .modToolsSection {
  clear: both;
  padding: 50px;
  border-top: 1px solid #ccc;
}
.readerTextTableOfContents .content .dlSection {
  clear: both;
  padding-top: 50px;
  border-top: 1px solid #ccc;
}
.modTools .dlSectionTitle {
    width: 60%;
    margin: 0 auto;
}
.modTools .dlSectionTitle,
.readerTextTableOfContents .content h2 {
    text-transform: uppercase;
    color: #999;
    padding: 10px 0;
    margin-bottom: 14px;
}
.modTools .dlVersionSelect {
  display: block;
}

.modTools .dlVersionSelect,
.readerTextTableOfContents .content .dlVersionSelect {
    width: 60%;
    margin: 10px auto;
    background-color: white;
    font-size: 14px;
    height: 3em;
    border-color: #ccc;
    border-radius: 3px;
    color: #333;
    font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
}
/* ... */

